--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -1,4 +1,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 <script>
   var socket = io();
+  socket.on('waitingRoom', function(msg){
+    console.log('waitingRoom: ' + msg);
+  });
 </script>
