--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -1,6 +1,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 <script>
-  var socket = io();
+  var socket = io('http://localhost:3000?userId=33299480&storeId=1', { path: '/waiting-room-socket' });
   socket.on('waitingRoom', function(msg){
     console.log('waitingRoom: ' + msg);
   });
