--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -1,7 +1,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
-  var socket = io('http://localhost:3000?userId=33299480&storeId=1', { path: '/waiting-room-socket' });
-  socket.on('waitingRoom', function(msg){
-    console.log('waitingRoom: ' + msg);
-  });
+    var storeId = 3;
+    var userId = 241281;
+
+    var socket = io('http://localhost:3000?userId='+ userId +'&storeId=' + storeId, { path: '/waiting-room-socket' });
+    socket.on('waitingRoom', function(msg){
+        console.log('waitingRoom: ' + msg);
+    });
+
+    $( document ).ready(function() {
+        $('#storeId').html(storeId);
+    });
+
 </script>
+<html>
+    <body>
+        <h1>Sala de espera <span id="storeId"></span></h1>
+    </body>
+</html>
