--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -1,8 +1,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
-    var storeId = 3;
-    var userId = 241281;
+    var storeId = 1;
+    var userId = 33299480;
 
     var socket = io('http://localhost:3000?userId='+ userId +'&storeId=' + storeId, { path: '/waiting-room-socket' });
     socket.on('waitingRoom', function(msg){
