--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -1,21 +1,23 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
-    var storeId = 1;
-    var userId = 33299480;
+    var storeId = 3;
+    var clientId = 9214555;
 
-    var socket = io('http://localhost:3000?userId='+ userId +'&storeId=' + storeId, { path: '/waiting-room-socket' });
+    var socket = io('http://localhost:3000?userId='+ clientId +'&storeId=' + storeId, { path: '/waiting-room-socket' });
     socket.on('waitingRoom', function(msg){
         console.log('waitingRoom: ' + msg);
     });
 
     $( document ).ready(function() {
         $('#storeId').html(storeId);
+        $('#clientId').html(clientId);
     });
 
 </script>
 <html>
     <body>
         <h1>Sala de espera <span id="storeId"></span></h1>
+        <h2>DNI: <span id="clientId"></span></h2>
     </body>
 </html>
