--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -1,5 +1,11 @@
+<!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+-->
+
+<script src="js/socket.io.dev.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+
 <script>
     function getJsonFromUrl(url) {
         if(!url) url = location.search;
@@ -19,8 +25,13 @@
 
     var socket = io('http://localhost:3000?clientId='+ clientId +'&storeId=' + storeId, { path: '/waiting-room-socket' });
 
-    socket.on('waitingRoomChanged', function(waitingRoom){
-        console.log('waitingRoomChanged: ' + waitingRoom);
+    socket.on('WAITING_ROOM_CHANGED', function(waitingRoom){
+        console.log('WAITING_ROOM_CHANGED: ' + waitingRoom);
+        $("#waitingRoom").html(waitingRoom);
+    });
+
+    socket.on('WAITING_ROOM_SENDED', function(waitingRoom){
+        console.log('WAITING_ROOM_SENDED: ' + waitingRoom);
         $("#waitingRoom").html(waitingRoom);
     });
 
