25-05-2019 - Implement stable state

--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -48,7 +48,7 @@
 
             socket.on('WAITING_ROOM_SENDED', function(waitingRoom){
                 console.log(waitingRoom);
-                console.log('WAITING_ROOM_SENDED' + waitingRoom);
+                console.log('WAITING_ROOM_SENDED',  waitingRoom);
                 renderWaitingRoom(waitingRoom);
             });
         }
