--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -1,8 +1,3 @@
-<!--
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
--->
-
 <script src="js/socket.io.dev.js"></script>
 <script src="js/jquery-3.4.1.min.js"></script>
 
@@ -36,7 +31,7 @@
     var clientId = params.clientId;
 
     $.post(
-        'http://localhost:3000/waiting-room', // url
+        '/waiting-room', // url
         { storeId, clientId }, // params
         () => { // callback
             var socket = io('http://localhost:3000?clientId='+ clientId +'&storeId=' + storeId, { path: '/waiting-room-socket' });
