--- a/waiting-room-render.html
+++ b/waiting-room-render.html
@@ -35,17 +35,46 @@
     $.post(
         '/waiting-room/' + storeId, // url
         { email, name, lastName }, // params
-        () => { // callback
-            var socket = io('?clientId='+ name +'&storeId=' + storeId, { path: '/waiting-room-socket' });
+        (response, textStatus, request) => { // callback
+            const token = request.getResponseHeader('Authorization');
+            $("#token").html(token);
 
-            socket.on('WAITING_ROOM_CHANGED', function(waitingRoom){
-                console.log('WAITING_ROOM_CHANGED', waitingRoom);
-                renderWaitingRoom(waitingRoom);
+            const waitingRoomRequestId = response.data.waitingRoomRequestId;
+            $("#waitingRoomRequestId").html(waitingRoomRequestId);
+
+            var socket = io(
+                '?storeId='+ storeId,
+                {
+                    path: '/waiting-room-socket',
+                    extraHeaders: {
+                        Authorization: token
+                    },
+                    transportOptions: {
+                        polling: {
+                            extraHeaders: {
+                                Authorization: token
+                            }
+                        }
+                    }
+                }
+            );
+
+            socket.on('disconnect', function(){
+                $("#socketStatus").html("<span style='color: darkred'>disconnected</span>")
+            });
+
+            socket.on('connect', function(){
+                $("#socketStatus").html("<span style='color: green'>connected</span>")
             });
 
             socket.on('WAITING_ROOM_SENDED', function(waitingRoom){
                 console.log(waitingRoom);
                 console.log('WAITING_ROOM_SENDED',  waitingRoom);
+                renderWaitingRoom(waitingRoom);
+            });
+
+            socket.on('WAITING_ROOM_CHANGED', function(waitingRoom){
+                console.log('WAITING_ROOM_CHANGED', waitingRoom);
                 renderWaitingRoom(waitingRoom);
             });
         }
@@ -54,7 +83,15 @@
 <html>
     <body>
         <h1>Tienda ID: <span id="storeId"></span></h1>
-        <h2>Cliente: <span id="clientName"></span></h2>
+        <h1>Socket STATUS: <span id="socketStatus"></span></h1>
+
+        <h2>waitingRoomRequestId</h2>
+        <p id="waitingRoomRequestId"></p>
+
+        <h2><span id="clientName"></span></h2>
+        <p id="token"></p>
+
+        <h1>COLA</h1>
         <p><span id="waitingRoom"></span></p>
     </body>
 </html>
