17-06-2019 - Socket.IO sessions and middleware

--- a/public/client.html
+++ b/public/client.html
@@ -82,8 +82,10 @@
                     renderWaitingRoom(waitingRoom);
                 });
             }
-        );
-
+        ).fail(function(response) {
+            console.log(response);
+            alert( response.responseJSON.message );
+        });
     });
 </script>
 <html>
