23-06-2019 - Refactor client.html and store.html

--- a/public/client.html
+++ b/public/client.html
@@ -51,6 +51,7 @@
                 getRequestDataFromApi(requestId)
                     .then(response => {
                         const requestData = response.data;
+                        // store request fetched on memory
                         requests[requestData.waitingRoomRequestId] = requestData;
                         updateRequestLabel(requestData);
                     });
