--- a/public/store.html
+++ b/public/store.html
@@ -74,7 +74,7 @@
 <html>
     <body>
         <div style="display: none;" id="invalidParams">
-            <h1 style="color: darkred">Error - Required uri: ?email=alemmartin@gmail.com&password=sonserios</h1>
+            <h1 style="color: darkred">Error - Required uri: ?email=alemmartin@gmail.com&password=sonserios10</h1>
         </div>
 
         <h1>Tienda ID: <span id="storeId"></span></h1>
