--- a/public/store-user.html
+++ b/public/store-user.html
@@ -35,7 +35,7 @@
         // iterate each call request
         $.each(queue, (index, callRequestId) => {
             // append element with "loading..." state
-            $("#queue").append('<p id="' + callRequestId +'"><span class="data">' + callRequestId + ' - ' + 'loading...' + '</span> <button class="deleteCallResquest">Delete</button></p>');
+            $("#queue").append('<p id="' + callRequestId +'"><span class="data">' + callRequestId + ' - ' + 'loading...' + '</span> <button class="deleteCallResquest">Cancel</button></p>');
 
             // get request from memory
             var callRequest = callRequests[callRequestId];
@@ -61,9 +61,16 @@
                 url: '/stores/' + storeId + '/call-requests/' + callRequestId, // url
                 type: 'DELETE'
             }).then(() => {
-                alert("Call request CANCELLED");
+                $("#fadeMessage").text("Call Request cancelled");
+                $("#fadeMessage").fadeOut(6000);
+
             }).catch(res => {
-                alert("ERROR cancelling the call request: " + res.responseJSON.message);
+                if(res.responseJSON) {
+                    alert("ERROR cancelling the call request: " + res.responseJSON.message);
+                } else {
+                    alert("ERROR occurred, check network tab console");
+                }
+
             });
         });
 
@@ -93,11 +100,11 @@
                 );
 
                 socket.on('disconnect', () => {
-                    $("#socketStatus").html("<span style='color: darkred'>disconnected</span>")
+                    $("#socketStatus").html("<span style='color: darkred'>SOCKET DISCONNECTED</span>")
                 });
 
                 socket.on('connect', () => {
-                    $("#socketStatus").html("<span style='color: green'>connected</span>")
+                    $("#socketStatus").html("<span style='color: green'>SOCKET CONNECTED</span>")
                 });
 
                 socket.on('WAITING_ROOM_SENDED', waitingRoom => {
@@ -118,18 +125,22 @@
     });
 </script>
 <html>
-<body>
-<div style="display: none;" id="invalidParams">
-    <h1 style="color: darkred">Error - Required uri: ?email=alemmartin@gmail.com&password=sonserios10</h1>
-</div>
+    <body>
+        <div style="display: none;" id="invalidParams">
+            <h1 style="color: darkred">Error - Required uri: ?email=alemmartin@gmail.com&password=sonserios10</h1>
+        </div>
 
-<h1>Tienda ID: <span id="storeId"></span></h1>
-<h1>Socket STATUS: <span id="socketStatus"></span></h1>
+        <div style="text-align: center">
+            <h1 style="text-align: center">TIENDA ID: <span id="storeId"></span></h1>
+            <h3><span id="socketStatus"></span></h3>
+            <h2 id="fadeMessage" style="color: orangered"></h2>
+        </div>
+        <hr/>
 
-<h2>User Email</h2>
-<p id="email"></p>
+        <h3>STORE USER</h3>
+        <p id="email"></p>
 
-<h1>COLA</h1>
-<p><span id="queue"></span></p>
-</body>
+        <h3>QUEUE</h3>
+        <p><span id="queue"></span></p>
+    </body>
 </html>
