--- a/public/call-request.html
+++ b/public/call-request.html
@@ -172,7 +172,7 @@
         <h4>Token</h4>
         <p id="token"></p>
 
-        <h4>COLA</h4>
+        <h4>QUEUE</h4>
         <p><span id="queue"></span></p>
     </body>
 </html>
