--- a/public/store-user.html
+++ b/public/store-user.html
@@ -4,6 +4,7 @@
 <script>
     var callRequests = [];
     var storeId = null;
+    var storeUserId = null;
 
     const getJsonFromUrl = url => {
         if(!url) url = location.search;
@@ -95,6 +96,29 @@
             });
         });
 
+        // Get calls
+        $('#getCalls').on('click', ev => {
+            if(!storeUserId) {
+                alert("Not logged in");
+                return ;
+            }
+            $.get(
+                '/stores/' + storeId + '/calls?storeUserId' + storeUserId + '&state=CALLED', // url
+                {  } //params
+            ).then(response => {
+                alert("See console");
+                console.log(response.data);
+            }).catch(res => {
+                if(res.responseJSON) {
+                    alert("ERROR calling the call request: " + res.responseJSON.message);
+                } else {
+                    alert("ERROR occurred, check network tab console");
+                }
+            });
+        });
+
+
+
         var params = getJsonFromUrl();
         var email = params.email;
         var password = params.password;
@@ -110,6 +134,8 @@
             { email, password }, // params
             (response, textStatus, request) => { // callback
                 storeId = response.data.storeId;
+                storeUserId = response.data.storeUserId;
+
                 $("#storeId").html(storeId);
                 $("#removeAllBtn").show();
 
@@ -154,6 +180,7 @@
         <div style="text-align: center">
             <h1 style="text-align: center">TIENDA ID: <span id="storeId"></span></h1>
             <h3><span id="socketStatus"></span></h3>
+            <p><button id="getCalls">Get current calls</button></p>
             <h2 id="fadeMessage" style="color: orangered"></h2>
         </div>
         <hr/>
